# nonebot-plugin-bangumi

./: .gitignore  README.md  __init__.py  pyproject.toml
api_tpyes/: __init__.py  query_types.py  subject_types.py
query/: __init__.py  search.py  subjects.py  tools.py
